wordle-solver/src/App.css
#root {
  width: 100vw;
  height: 100vh;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
  background-color: black;

  --select-grey: rgb(59, 59, 59);
  --select-yellow: rgb(204, 175, 13);
  --select-green: rgb(34, 150, 23);
  --key-grey: rgb(88, 88, 88);
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

.container {
  display: flex;
  align-items: center; /* Align elements to the right horizontally */
  justify-content: center; /* Center elements vertically */
  height: 48vh;
  margin-top: 6vh;
  margin-bottom: 6vh;
  position: relative;
}

.word-list {
  position: absolute;
  right: 0;
  top: 0;
  width: 12vw;
  max-height: 100%;
  overflow-y: auto;
}

.list-group li {
  background-color: black;
  color: white;
  border-color: var(--select-grey);
}

.main-grid {
  width: 20vw;
  height: 100%;
}

.grid-row {
  display: flex;
  height: 16.6667%;
}

.grid-col {
  border: 2px solid var(--select-grey);
  margin-right: 6px;
  margin-bottom: 6px;
  font-size: 2.5em;
  font-weight: bold;
  justify-content: center;
  align-items: center;
  text-align: center;
  flex-grow: 1;
  box-sizing: border-box; /* Include padding and border in the element's total width and height */
  caret-color: transparent;
  cursor: pointer;
}

.grid-col:focus {
  outline: none;
}

.grid-col::selection {
  background-color: transparent;
}

.key-row {
  display: flex;
  list-style: none;
  justify-content: center;
  height: 7vh;
  width: 34vw;
  margin: auto;
  margin-bottom: 6px;
}

.key-row li {
  margin-right: 6px; 
  border: 1px solid black;
  border-radius: 6px;
  width: 9%;
  background-color: var(--key-grey);
  color: white;
  font-size: 2.5em;
  font-weight: bold;
  justify-content: center;
  text-align: center;
  user-select: none;
  cursor: pointer;
}

.special-key-label {
  color: white;
  font-size: 1.3em;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 6px; 
  border: 1px solid black;
  border-radius: 6px;
  width: 13%;
  background-color: var(--key-grey);
  user-select: none;
  cursor: pointer;
}

.default-list-item {
  cursor:unset;
  user-select: none;
}

.word-item {
  cursor: pointer;
  user-select: none;
}

